-new house title saves to db

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <title>MERN Boilerplate</title>
+  <title>Room E's</title>
 </head>
 
 <body>
